manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeeves
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeeves
  template:
    metadata:
      labels:
        app: jeeves
    spec:
      serviceAccount: jeeves
      volumes:
        - name: jeeves-github
          secret:
            secretName: jeeves-github
      containers:
        - name: jeeves
          image: containersol/jeeves
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
          volumeMounts:
          - name: jeeves-github
            readOnly: true
            mountPath: "/secrets"
