manifests/base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: jeeves
  namespace: jeeves
spec:
  rules:
  - host: jeeves.apps.csol.cloud
    http:
      paths:
      - backend:
          serviceName: jeeves
          servicePort: 80
        path: /
  tls:
  - hosts:
    - jeeves.apps.csol.cloud
    secretName: jeeves-tls
